fix: input padding on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -354,4 +354,8 @@ html {
   .task-item {
     padding: 15px 5px;
   }
+
+  .task-editor-container {
+    padding: 5px;
+  }
 }
